@@ -5,6 +5,14 @@ Change history for Coverage.py
 Version 3.5.4b1
 ---------------
 
+- Wildcards in ``include=`` and ``omit=`` arguments were not handled properly
+  in reporting functions, though they were when running.  Now they are handled
+  uniformly, closing `issue 163`.  **NOTE**: it is possible that your
+  configurations may now be incorrect.  If you use ``include`` or ``omit``
+  during reporting, whether on the command line, through the API, or in a
+  configuration file, please check carefully that you were not relying on the
+  old broken behavior.
+
 - Running an HTML report in Python 3 in the same directory as an old Python 2
   HTML report would fail with a UnicodeDecodeError. This issue (`issue 193`_)
   is now fixed.
@@ -15,6 +23,7 @@ Version 3.5.4b1
 - Docstrings for the legacy singleton methods are more helpful.  Thanks Marius
   Gedminas.  Closes `issue 205`_.
 
+.. _issue 163: https://bitbucket.org/ned/coveragepy/issue/163/problem-with-include-and-omit-filename
 .. _issue 193: https://bitbucket.org/ned/coveragepy/issue/193/unicodedecodeerror-on-htmlpy
 .. _issue 201: https://bitbucket.org/ned/coveragepy/issue/201/coverage-using-django-14-with-pydb-on
 .. _issue 205: https://bitbucket.org/ned/coveragepy/issue/205/make-pydoc-coverage-more-friendly
